[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://PlayManager.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Node2D" groups=["OnlineManager"]]
script = ExtResource( 1 )

[node name="Win" type="Control" parent="."]
visible = false
margin_left = 320.0
margin_top = 180.0
margin_right = 663.0
margin_bottom = 451.0

[node name="RichTextLabel" type="RichTextLabel" parent="Win"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -15.5
margin_right = 43.5
margin_bottom = 37.5
text = "You Win"

[node name="ReadyScreen" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 325.0
margin_top = 183.0
margin_right = 661.0
margin_bottom = 449.0

[node name="Panel" type="Panel" parent="ReadyScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UserReadySpawnUnder" type="VBoxContainer" parent="ReadyScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 37.0
margin_right = -27.0
margin_bottom = -71.0

[node name="ReadyButton" type="Button" parent="ReadyScreen"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 34.0
margin_top = -37.0
margin_right = -36.0
margin_bottom = -17.0
text = "Ready"

[node name="MatchConnectingPanel" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 322.0
margin_top = 182.0
margin_right = 658.0
margin_bottom = 450.0

[node name="Panel" type="Panel" parent="MatchConnectingPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -134.0
margin_right = 168.0
margin_bottom = 134.0

[node name="RichTextLabel" type="RichTextLabel" parent="MatchConnectingPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -19.0
margin_right = 71.0
margin_bottom = 31.0
text = "Connecting....."

[node name="MatchMakingPanel" type="Control" parent="."]
margin_left = 321.0
margin_top = 181.0
margin_right = 657.0
margin_bottom = 449.0

[node name="Panel" type="Panel" parent="MatchMakingPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartMatchMaking" type="Button" parent="MatchMakingPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -9.0
margin_right = 93.0
margin_bottom = 27.0
text = "Start Match Making"

[node name="RichTextLabel" type="RichTextLabel" parent="MatchMakingPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -60.0
margin_right = 20.0
margin_bottom = -37.0
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="MatchMakingPanel"]
margin_left = 132.0
margin_top = 71.0
margin_right = 263.0
margin_bottom = 95.0
text = "ExampleName"

[node name="PlayManager" type="Node2D" parent="." groups=["GameWorld"]]
script = ExtResource( 2 )
player = ExtResource( 3 )

[node name="SpawnPoints" type="Node2D" parent="PlayManager"]

[node name="1" type="Position2D" parent="PlayManager/SpawnPoints"]
position = Vector2( 91, 57 )

[node name="2" type="Position2D" parent="PlayManager/SpawnPoints"]
position = Vector2( 346, 62 )

[node name="3" type="Position2D" parent="PlayManager/SpawnPoints"]
position = Vector2( 352, 246 )

[node name="4" type="Position2D" parent="PlayManager/SpawnPoints"]
position = Vector2( 82, 245 )

[node name="PlayersSpawnUnder" type="Node2D" parent="PlayManager"]

[connection signal="button_down" from="ReadyScreen/ReadyButton" to="." method="_on_ReadyButton_button_down"]
[connection signal="button_down" from="MatchMakingPanel/StartMatchMaking" to="." method="_on_StartMatchMaking_button_down"]
